2005-10-26  Richard M. Stallman  <rms@gnu.org>

	* info.el (Info-fontify-node): Fix detection of sentence-break
	before *Note.

2005-10-26  Romain Francoise  <romain@orebokech.com>

	* smerge-mode.el: Add `tools' to file keywords.

2005-10-26  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map): Only display gud-until icon
	when the fringe is not available.

	* progmodes/gdb-ui.el (def-gdb-auto-updated-buffer)
	(def-gdb-auto-update-trigger): Simplify construction.
	(gdb-locals-buffer): Use def-gdb-auto-update-trigger instead of
	def-gdb-auto-updated-buffer as gdb-info-locals-handler is
	defined explicitly.
	(gdb-assembler-buffer): Use def-gdb-auto-update-handler instead of
	def-gdb-auto-updated-buffer as gdb-invalidate-assembler is
	defined explicitly.
	(gdb-info-locals-custom): Remove as it's a no-op.

2005-10-25  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-mode): Remove narrowing before
	performing the initial decoding or final encoding.

2005-10-25  Romain Francoise  <romain@orebokech.com>

	* emacs-lisp/find-func.el (find-library-name): Also strip
	extension if library name ends in .el, to take advantage of
	`find-library-suffixes'.

2005-10-25  Richard M. Stallman  <rms@gnu.org>

	* menu-bar.el (menu-bar-help-menu): Say which kind of therapist.

2005-10-25  Juri Linkov  <juri@jurta.org>

	* textmodes/texinfo.el (texinfo-mode): Change charset of one
	quotation mark from [mule-unicode-0100-24ff] to [japanese-jisx0208].

2005-10-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* play/blackbox.el (blackbox-mode-map): Move init into declaration.
	(blackbox-redefine-key): Add argument `map'.

	* jit-lock.el (jit-lock-fontify-now): Be careful not to skip multiline
	regions when moving the jit-lock-context-unfontify-pos boundary.

2005-10-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* net/browse-url.el (browse-url-of-buffer): Add ".html" to
	filename.

2005-10-25  Masatake YAMATO  <jet@gyve.org>
