@@ -1,3 +1,9 @@
+2005-10-26  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* term.el (term-emulate-terminal, term-handle-colors-array)
+	(term-handle-ansi-escape): Specify the terminfo capabilities
+	implemented.
+
 2005-10-26  Richard M. Stallman  <rms@gnu.org>
 
 	* info.el (Info-fontify-node): Fix detection of sentence-break
